crates/runtime/src/tests/snapshots/query_order_by.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT * FROM sales ORDER BY product_id\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                Wildcard(
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: None,
                                        opt_except: None,
                                        opt_replace: None,
                                        opt_rename: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Table {
                                        name: ObjectName(
                                            [
                                                Ident {
                                                    value: "sales",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ],
                                        ),
                                        alias: None,
                                        args: None,
                                        with_hints: [],
                                        version: None,
                                        with_ordinality: false,
                                        partitions: [],
                                        json_path: None,
                                    },
                                    joins: [],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: Some(
                        OrderBy {
                            exprs: [
                                OrderByExpr {
                                    expr: Identifier(
                                        Ident {
                                            value: "product_id",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                    asc: None,
                                    nulls_first: None,
                                    with_fill: None,
                                },
                            ],
                            interpolate: None,
                        },
                    ),
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Sort: sales.product_id ASC NULLS LAST",
            "  Projection: *",
            "    TableScan: sales",
        ],
    ),
    Ok(
        [
            "+------------+--------------+----------+---------+-------+",
            "| product_id | retail_price | quantity | city    | state |",
            "+------------+--------------+----------+---------+-------+",
            "| 1          | 2.0          | 1        | SF      | CA    |",
            "| 1          | 2.0          | 2        | SJ      | CA    |",
            "| 2          | 5.0          | 4        | SF      | CA    |",
            "| 2          | 5.0          | 8        | SJ      | CA    |",
            "| 2          | 5.0          | 16       | Miami   | FL    |",
            "| 2          | 5.0          | 32       | Orlando | FL    |",
            "| 2          | 5.0          | 64       | SJ      | PR    |",
            "+------------+--------------+----------+---------+-------+",
        ],
    ),
)
